# smart-web-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: books_toscrape.yaml  config_schema.md
src/scraper/: __init__.py  cli.py  client.py  config.py  exporter.py  paginator.py  parser.py  state.py  utils.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_exporter.py  test_paginator.py  test_parser.py  test_state.py
